Fixed some errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.security.user.name=user
 spring.security.user.password=pass
 security.basic.authorize-mode=authenticated
 security.basic.path=/**
-logging.level.root=DEBUG
-logging.pattern.dateformat=dd/MM/yyyy
-logging.file.name=app.log
-server.tomcat.accesslog.enabled=true
+#logging.level.root=DEBUG
+#logging.pattern.dateformat=dd/MM/yyyy
+#logging.file.name=app.log
+#server.tomcat.accesslog.enabled=true
 
